Fixed outline issue on mobile view

--- a/my-Portfolio/src/App.css
+++ b/my-Portfolio/src/App.css
@@ -5,6 +5,7 @@
   text-align: center;
 }
 
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +40,7 @@
 
 .read-the-docs {
   color: #888;
+} */
+/* *{
+  outline: red 2px solid;
 } */
